# vmtools-next

./: .gitattributes  .gitignore  AGENTS.md
vmtools-next/: README.md  alembic.ini  pyproject.toml
vmtools-next/alembic/: env.py
vmtools-next/alembic/versions/: .gitkeep
vmtools-next/config/: config.dev.yaml  config.prod.yaml  config.yaml  logging.yaml
vmtools-next/deploy/: Dockerfile  docker-compose.yml  install.sh
vmtools-next/deploy/nginx/: vmtools-next.conf
vmtools-next/deploy/systemd/: vmtools-next.service
vmtools-next/scripts/: block_to_item_output.py  generate_block_to_item.py
vmtools-next/src/vmtools_next/: __init__.py  config.py  main.py
vmtools-next/static/: index.html
vmtools-next/static/assets/: AppLayout-2xu8snk0.js  AppLayout-CUqAJR01.css  AppLayout-DVfb9875.js  AppLayout-DyAMS-DA.js  AppLayout-Hf17jLlU.css  BotManageView-BKl2xx7Z.js  BotManageView-BY60-lI1.css  BotManageView-Bk_MLNgH.css  BotManageView-BmsM3tFB.js  BotManageView-D2bLBnoY.js  BuildTaskDetailView-C64LJTCf.css  BuildTaskDetailView-D1JJHmzU.js  BuildTaskDetailView-DKPbc5y0.js  BuildTaskDetailView-nsaiP8lz.js  BuildTaskListView-0w_clIVT.js  BuildTaskListView-BzKa_u0M.css  BuildTaskListView-C649KV4w.js  BuildTaskListView-D4ShhFhS.js  ConfigView-3RbgTo3s.js  ConfigView-BbfRYYCQ.js  ConfigView-D97qhQea.js  ConfigView-DHnxErHG.css  DashboardView-B39cI2mj.css  DashboardView-BRQFLAHd.js  (+58 more)
vmtools-next/tests/: __init__.py  test_config.py  test_container_utils.py  test_core.py  test_material_calculator.py  test_migration.py  test_plugin_manager.py  test_safety.py  test_travel_manager.py
(+138 files in other folders)
