[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmtools-next"
version = "0.1.0"
description = "VMTools Next — MCC-based Linux server-side automation for Minecraft building & logistics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Venus" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "python-socketio[asyncio]>=5.0.0",
    "httpx>=0.27.0",
    "nbtlib>=2.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.0.0",
    "websockets>=12.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "watchdog>=4.0.0",
    "cachetools>=5.3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[project.scripts]
vmtools-next = "vmtools_next.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
